# app/api/httpserver/v1/student_homework.go
@@ -21,20 +21,80 @@ func NewStudentHomeworkHandler(
 	}
 }
 
+// GetStudentHomeworks
+// @Summary get all homeworks
+// @ID get-all-homeworks
+// @Description возвращает все домашние работы всех студентов в виде списка
+// @Tags students, homeworks
+// @Produce json
+// @Success 200 {object} model.StudentHomeworksListDto
+// @Failure 500 {object} model.ResponseMessage
+// @Router /students/homeworks [get]
 func (h *StudentHomeworkHandlers) GetStudentHomeworks(c *gin.Context) {
 }
 
+// GetStudentHomeworksByStudentId
+// @Summary get contact type
+// @Description возвращает все домашние работы студента с указанным student_id
+// @ID get-all-student-homeworks
+// @Param id path string true "student_id"
+// @Tags students, homeworks
+// @Produce json
+// @Success 200 {object} model.StudentHomeworksListDto
+// @Failure 500 {object} model.ResponseMessage
+// @Router /students/{student_id}/homeworks [get]
 func (h *StudentHomeworkHandlers) GetStudentHomeworksByStudentId(c *gin.Context) {
 }
 
+// GetStudentHomeworkById
+// @Summary get student's homework
+// @Description возвращает определенную лекцию указанного стцдента
+// @ID get-student-homework
+// @Param id path string true "student_id"
+// @Param id path string true "homework_id"
+// @Tags students, homeworks
+// @Produce json
+// @Success 200 {object} model.StudentHomework
+// @Failure 500 {object} model.ResponseMessage
+// @Router /students/{student_id}/homeworks/{homework_id} [get]
 func (h *StudentHomeworkHandlers) GetStudentHomeworkById(c *gin.Context) {
 }
 
+// AddStudentHomework
+// @Summary get contact type
+// @Description добавляет новый тип контакта
+// @ID add-contact-type
+// @Param contact_type body model.NewContactTypeDto true "contact_type"
+// @Tags students, homeworks
+// @Produce json
+// @Success 200 {object} model.ResponseMessage
+// @Failure 500 {object} model.ResponseMessage
+// @Router /students/homeworks [post]
 func (h *StudentHomeworkHandlers) AddStudentHomework(c *gin.Context) {
 }
 
+// UpdateStudentHomework
+// @Summary update student homework
+// @Description изменяет домашнюю работу студента
+// @ID update-student-homework
+// @Param student_homework body model.StudentHomework true "student_homework"
+// @Tags students, homeworks
+// @Produce json
+// @Success 200 {object} model.ResponseMessage
+// @Failure 500 {object} model.ResponseMessage
+// @Router /students/homeworks [put]
 func (h *StudentHomeworkHandlers) UpdateStudentHomework(c *gin.Context) {
 }
 
+// DeleteStudentHomework
+// @Summary delete student homework
+// @Description удаляет домашнюю работу студента
+// @ID delete-student-homework
+// @Param id path string true "student_homework_id"
+// @Tags students, homeworks
+// @Produce json
+// @Success 200 {object} model.ResponseMessage
+// @Failure 500 {object} model.ResponseMessage
+// @Router /students/homeworks/{:contact_type_id} [delete]
 func (h *StudentHomeworkHandlers) DeleteStudentHomework(c *gin.Context) {
 }
